# Parcerias-UFPA

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: flyway.yml
app/: main.py
app/const/: config.py  enums.py  url.py
app/controllers/: dev_router.py  email.py  entidades.py  laboratorio.py  propriedade_intelectual.py
app/db/: db.py
app/exceptions/: db.py
app/models/: __init__.py  email.py  email_log.py  equipe.py  instituto.py  interesse.py  lab_pertence.py  laboratorio.py  mensagem.py  pi_pertence.py  propriedade_intelectual.py  unidades_academicas.py  universidade.py  usuario.py
app/saml/: advanced_settings.json  settings.json
app/saml/certs/: sp.crt  sp.key
app/schemas/: auth.py  email.py  email_log.py  equipe.py  instituto.py  interesse.py  lab_pertence.py  laboratorio.py  pi_pertence.py  propriedade_intelectual.py  unidades_academicas.py  universidade.py  usuario.py
app/security/: auth.py
app/statics/: institutos.csv  unidade_academica.csv  universidades.csv
app/utils/: email.py  extract_entidade.py  laboratorio.py  validacoes.py
app/views/: __init__.py  dev_router.py  email.py  entidade.py  interesse.py  laboratorio.py  propriedade_intelectual.py  usuario.py
migrations/: flyway.config
migrations/versions/: V202603111652__init_db.sql  V202603231156__create_table_email.sql  V202604240053__criar_tabela_lab_pertence.sql  V202604281549__add_data_criacao_laboratorio.sql
